Nothing is ever a total loss; it can always serve as a bad example.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE HTML>
-<!-- wow
+<!--                              wow
+  --  wow
   --              such game
   --    very dogescript
   --                           wow
   --  many challenge
   --                  so html5
+  --                                    much open-source
+  --
+  -- For the source code, go to:
+  -- https://github.com/alexdantas/doge-toe/
   -->
 <html>
   <head>
@@ -38,7 +43,11 @@
 	  <button id="reset" onclick="resetGame()">Reset</button>
 	</div>
 
+	<!-- jQuery for selecting stuff, jQuery UI for the highlight effect -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+
+	<!-- Finally, my game's script -->
 	<script src="toe.js"></script>
   </body>
 
