It is annoying to be honest to no purpose. 		-- Publius Ovidius Naso (Ovid)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 
 	<!-- Finally, my game's script -->
-	<script src="toe.js"></script>
+	<script src="toe.js.min"></script>
   </body>
 
 </html>
